Fixed visible menu bar in portrait

--- a/client/styles/app.css
+++ b/client/styles/app.css
@@ -228,7 +228,7 @@ tr th {
     width: 100%;
     height: 100%;
     background: #47BDA5;
-    z-index: 300;
+    z-index: 30000;
     color: #FFF;
     box-sizing: border-box;
     padding-top: 25%;
